[fix]: fix alignment of elements

--- a/index.css
+++ b/index.css
@@ -9,14 +9,19 @@ body{
     opacity: .96;
 
 }
+
+.clock-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #digital-clock{
     height: max-content;
-    width: 83px;
+    min-width: 83px;
+    margin-top: -100px;
     background-color:  rgba(128, 128, 128, 0.103);
     backdrop-filter: blur(10px) saturate(29%);
-    position: absolute;
-    left: 37%;
-    top: 200px;
     border: 1px solid rgba(128, 128, 128, 0.336);
     border-radius: 10px;
     display: flex;
